<resources>
    <string name="app_name">Media Client</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_matching">Password one more time</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_an_account">…or register</string>
    <string name="register_activity_label">Become a new user</string>
    <string name="register_button">Sign up!</string>
    <string name="login_button">Sign in!</string>

    <string name="feed_new_tab">New</string>
    <string name="feed_hot_tab">Hot</string>
    <string name="feed_best_tab">Best</string>
    <string name="feed_discussed_tab">Discussing</string>

    <!--SECTION FRO ORDER CREATE-->
    <string name="oc_wtitle">Title</string>
    <string name="oc_button_create">Create</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_new_feed_activity">New</string>
    <string name="tab_hot_feed_activity">Hot</string>
    <string name="tab_discussed_feed_activity">Discussed</string>
    <string name="tab_best_feed_activity">Best</string>
    <string name="feed_activity_name">Feed</string>
    <string name="hashtags_tw_oc">Hashtags:</string>
    <string name="description_tw_oc">Description:</string>
    <string name="video_tw_oc">Video:</string>
    <string name="category_tw_oc">Category:</string>
    <string name="photo_tw_oc">Photo:</string>
    <string name="deadline_tw_oc">Deadline:</string>
    <string name="private_tw_oc">Private?</string>
    <string name="cost_tw_oc">Cost:</string>
    <string name="title_tw_oc">Title:</string>
    <string name="date_hint_oc">date</string>
    <string name="time_hint_oc">time</string>
    <string name="money_hint_oc">money</string>
    <string name="button_add_ht_oc">+</string>
    <string name="add_more_info_hint_oc">add more info</string>
    <string name="delete_ht_oc">x</string>
    <string name="checkbox_private">CheckBox</string>
    <string name="rationale_location_permission_dialog_title">Location Permission Needed</string>
    <string name="rationale_location_permission_dialog_message">This app needs the Location permission, please accept to use location functionality</string>
    <string name="ok">OK</string>
    <string name="chosen_date_content">%d %d %d</string>
    <string name="chosen_time_content">%d:%d</string>
    <string name="make_order_btn">Make order</string>


</resources>
